@startuml

skinparam linetype ortho

abstract class FhysicsObject {
    {field} ...
    {abstract} + project(Vector2): Projection
    {method} ...
}

abstract class Polygon {
    {field} ...
    + project(Vector2): Projection
    {method} ...
}

class Circle {
    {field} ...
    + project(Vector2): Projection
    {method} ...
}

class Projection {
    + min: Float
    + max: Float
    + overlaps(Projection): Boolean
}

FhysicsObject   <|-- Circle
FhysicsObject   <|-- Polygon

@enduml